objects/Marketing_OPS_Project__c.object
<CustomObject>
    <description>Used by Marketing Operations for maintaining and assigning data projects.</description>
    <fields>
        <fullName>Additional_Campaign_Reviewers__c</fullName>
        <label>Additional Campaign Reviewers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Work_Description__c</fullName>
        <description>Please write the additional work that needs to be done to the file upload. (i.e. Ownership change)</description>
        <inlineHelpText>Please write the additional work that needs to be done to the file upload. (i.e. Ownership change)</inlineHelpText>
        <label>Additional Work Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <description>This field is used to determine who the project is assigned to.</description>
        <inlineHelpText>who is the project is assigned to ?</inlineHelpText>
        <label>Assigned to</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cliff Colburn</fullName>
                </value>
                <value>
                    <fullName>Joe Parathara</fullName>
                </value>
                <value>
                    <fullName>Ross Hays</fullName>
                </value>
                <value>
                    <fullName>CatapultWorks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Lookup</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Marketing Ops Projects</relationshipLabel>
        <relationshipName>Marketing_Ops_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Count__c</fullName>
        <description>This is a formula field that shows the current amount of campaign members in the campaign that is associated to this MOP</description>
        <formula>Campaign_Lookup__r.Total_Campaign_members__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a formula field that shows the current amount of campaign members in the campaign that is associated to this MOP.</inlineHelpText>
        <label>Campaign Member Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Pre_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of campaign members in SFDC before the list was loaded.</description>
        <inlineHelpText>The number of campaign members in SFDC before the list was loaded.</inlineHelpText>
        <label>Campaign Member Pre-Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Region__c</fullName>
        <formula>text( Campaign_Lookup__r.Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Requestor_Lookup__c</fullName>
        <formula>Campaign_Lookup__r.Campaign_Requester__r.FirstName  &amp;  &quot; &quot; &amp; Campaign_Lookup__r.Campaign_Requester__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Requestor Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Source_Code__c</fullName>
        <description>Please insert the campaign&apos;s source code here.</description>
        <label>Campaign Source Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Sub_Type__c</fullName>
        <formula>Text( Campaign_Lookup__r.SubType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Sub Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Title__c</fullName>
        <label>Campaign Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <formula>TEXT(Campaign_Lookup__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Type Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_by_Vendor_Date__c</fullName>
        <description>Please note when the service was completed by the vendor.</description>
        <inlineHelpText>When the service was completed by the vendor</inlineHelpText>
        <label>Completed by Vendor Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed_by_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed by Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>While the project is in progress, this date is the estimated date of completion. 
When the project is finished, this date is the actual date of completion.</description>
        <inlineHelpText>While the project is in progress, this date is the estimated date of completion. 
When the project is finished, this date is the actual date of completion.</inlineHelpText>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Count_Discrepancy_Description__c</fullName>
        <description>Description of the count discrepancy</description>
        <inlineHelpText>Description of the count discrepancy</inlineHelpText>
        <label>Count Discrepancy Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_in_Service__c</fullName>
        <description>IF THIS GETS MODIFIED, LIST PROCESSING DAYS SHOULD BE MODIFIED AS WELL. 

Calculates how many days it takes for us process a MOP request</description>
        <formula>CASE(MOD( List_Received__c - DATE(1985,6,24),7),
0 , CASE( MOD( Visible_in_Salesforce__c - List_Received__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( Visible_in_Salesforce__c - List_Received__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( Visible_in_Salesforce__c - List_Received__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( Visible_in_Salesforce__c - List_Received__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( Visible_in_Salesforce__c - List_Received__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( Visible_in_Salesforce__c - List_Received__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( Visible_in_Salesforce__c - List_Received__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( Visible_in_Salesforce__c - List_Received__c )/7)*5-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of project</description>
        <inlineHelpText>Description of project</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email_List_Requirements__c</fullName>
        <label>Email List Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Emailed_Requester_Finished__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check mark this box after the requester has been notified that the FUT request is finished.</description>
        <inlineHelpText>Check mark this box if the requester has been emailed</inlineHelpText>
        <label>Emailed Requester - Finished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emailed_Requester_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check mark if you emailed the requester notifying that you received the request and that it should take XX amount of days till the campaign members are visible</description>
        <inlineHelpText>Check mark if you emailed the requester notifying that you received the request and that it should take XX amount of days till the campaign members are visible</inlineHelpText>
        <label>Emailed Requester - Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <description>This field is used to show the campaign&apos;s event date</description>
        <formula>Campaign_Lookup__r.Event_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Campaign event date</inlineHelpText>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FUT_Exceptions_Processed__c</fullName>
        <description>This is the number of FUT Exceptions still in the system to be processed.</description>
        <label>FUT Exceptions Processed</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FUT_Exceptions__c</fullName>
        <description>How many FUT Exceptions &amp; possible reasons why?</description>
        <inlineHelpText>Count of exceptions &amp; why (if available)</inlineHelpText>
        <label>FUT Exceptions</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FUT_List_Type__c</fullName>
        <description>Select the list type from the FUT</description>
        <inlineHelpText>Which list type was selected in the FUT?</inlineHelpText>
        <label>FUT List Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>Engaged at Booth</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Wait Listed</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Downloaded</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Attended On-Demand</fullName>
                </value>
                <value>
                    <fullName>Responded</fullName>
                </value>
                <value>
                    <fullName>Visited</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                </value>
                <value>
                    <fullName>Clicked</fullName>
                </value>
                <value>
                    <fullName>Hot Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FUT_Prep_Count__c</fullName>
        <description>The number of rows after the file has been prepared for the FUT. (Removed rows that did not meet the minimum requirement). Please notify the requester about the members that did not meet the minimum requirements.</description>
        <inlineHelpText>Count of members in the file sent to through the FUT</inlineHelpText>
        <label>FUT Prep Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File_Upload_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the file upload is complete, please check mark this box and it will trigger an email notification to Marketing Operations</description>
        <inlineHelpText>Please check mark this box when the File Upload is complete. An email notification to Marketing Operations</inlineHelpText>
        <label>File Upload Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_List_Count__c</fullName>
        <description>The Final count of members that are visible in Salesforce from a list upload.</description>
        <inlineHelpText>The Final count of members that are visible in Salesforce from a list upload.</inlineHelpText>
        <label>Final List Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Steps__c</fullName>
        <description>Use this field to write out any final steps, such as who to send notification to, once the project is complete.</description>
        <label>Final Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>List_Load_Duration__c</fullName>
        <description>This is the List Submission Delta + Days in Service. This shows the total time from the event date till now (or when the file upload is completed).</description>
        <formula>List_Submission_Delta__c  + Days_in_Service__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the List Submission Delta + Days in Service. This shows the total time from the event date till now (or when the file upload is completed).</inlineHelpText>
        <label>List Load Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Load_Notes__c</fullName>
        <description>Any additional notes or details about this list load. (i.e. requester&apos;s email if it does not show up in the pick list, special instructions, etc..)</description>
        <inlineHelpText>Any additional notes or details about this FUT, such as the requester&apos;s email address if it does not show up in the pick list, special instructions, etc...</inlineHelpText>
        <label>List Load Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>List_Processing_Days__c</fullName>
        <description>IF THIS GETS MODIFIED, DAYS IN SERVICE SHOULD BE MODIFIED AS WELL

This calculates how many days it takes for us process a file upload, this field was created for the &quot;GLOBAL - Event File Upload Activity&quot; report. It mimics the Days in Service field although the name on the report was requested to be &quot;List Processing Days&quot; which does not fit properly for the &quot;Days in Service&quot; field which is also used to show how many days a MOPS has been in service</description>
        <formula>CASE(MOD( List_Received__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( Visible_in_Salesforce__c -  List_Received__c  ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Visible_in_Salesforce__c - List_Received__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Visible_in_Salesforce__c - List_Received__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Visible_in_Salesforce__c - List_Received__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Visible_in_Salesforce__c - List_Received__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Visible_in_Salesforce__c - List_Received__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Visible_in_Salesforce__c - List_Received__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Visible_in_Salesforce__c - List_Received__c )/7)*5-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Processing Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Received__c</fullName>
        <description>The date we received the list in its usable form.</description>
        <inlineHelpText>The date Marketing Operations receives the list in a usable form.</inlineHelpText>
        <label>Usable List Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>List_Requester__c</fullName>
        <description>Who requested this list? (Who will need to be emailed after the list is visible in SFDC)</description>
        <label>List Requester</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Submission_Delta__c</fullName>
        <description>This calculates how many days between the Campaign Event Date &amp; the date when the campaign list upload is submitted to Marketing Operations</description>
        <formula>CASE(MOD( Event_Date__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( List_Received__c - Event_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( List_Received__c - Event_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( List_Received__c - Event_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( List_Received__c - Event_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( List_Received__c - Event_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( List_Received__c - Event_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( List_Received__c - Event_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( List_Received__c - Event_Date__c )/7)*5-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How many days between the Campaign Event Date &amp; the List Received Date</inlineHelpText>
        <label>List Delivery Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loaded_into_the_FUT__c</fullName>
        <description>Date when the list was loaded into the FUT</description>
        <inlineHelpText>Date when the list was loaded into the FUT</inlineHelpText>
        <label>Loaded into the FUT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Ops_Project_ID__c</fullName>
        <displayFormat>MOP-{0000}</displayFormat>
        <label>Marketing Ops Project ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Next_Step_Due_Date__c</fullName>
        <label>Next Step Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Not_Original__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if this list upload is not an Original load, but an update</description>
        <inlineHelpText>Check this box if this list upload is not an Original load, but an update</inlineHelpText>
        <label>Not Original</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Count__c</fullName>
        <description>The number of rows in the original list, (before moving members that don&apos;t meet the minimum requirement)</description>
        <inlineHelpText>Count of members in the original list</inlineHelpText>
        <label>Original List Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outsourced_Service_Duration__c</fullName>
        <formula>IF(NOT(ISPICKVAL(Request_Type__c, &quot;Outsourced&quot;)), 0,

IF(ISBLANK(Completed_by_Vendor_Date__c),
((IF(Sent_to_Vendor_Date__c &lt;&gt; Today() ,
IF( /** Condition */
AND(
(5 - (CASE(MOD( Sent_to_Vendor_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) &lt; (CASE(MOD( Today() - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) ),
((( Today() - Sent_to_Vendor_Date__c ) + 1) &lt; 7)
),
/** Value to YES */
(
(CASE(MOD( Today() - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) - (5 - (CASE(MOD( Sent_to_Vendor_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)))
),
/** Value to NOT */
(
((FLOOR((( Today() - Sent_to_Vendor_Date__c ) - (CASE(MOD( Sent_to_Vendor_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0))) / 7)) * 5) +
(CASE(MOD( Sent_to_Vendor_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) +
(CASE(MOD( Today() - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0))
)
)
,0)) - 1)
,

(IF(Sent_to_Vendor_Date__c &lt;&gt; Completed_by_Vendor_Date__c ,
IF( /** Condition */
AND(
(5 - (CASE(MOD( Sent_to_Vendor_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) &lt; (CASE(MOD( Completed_by_Vendor_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) ),
((( Completed_by_Vendor_Date__c - Sent_to_Vendor_Date__c ) + 1) &lt; 7)
),
/** Value to YES */
(
(CASE(MOD( Completed_by_Vendor_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) - (5 - (CASE(MOD( Sent_to_Vendor_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)))
),
/** Value to NOT */
(
((FLOOR((( Completed_by_Vendor_Date__c - Sent_to_Vendor_Date__c ) - (CASE(MOD( Sent_to_Vendor_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0))) / 7)) * 5) +
(CASE(MOD( Sent_to_Vendor_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) +
(CASE(MOD( Completed_by_Vendor_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0))
)
)
,0)) - 1))</formula>
        <label>Outsourced Service Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outsourced_Service_Notes__c</fullName>
        <description>Please note any special requests or any important pre/post notes about the outsourced service.</description>
        <label>Outsourced Service Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outsourced_Service_Type__c</fullName>
        <description>Type of Outsourced Service</description>
        <inlineHelpText>Type of Outsourced Service</inlineHelpText>
        <label>Outsourced Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead File Uploads</fullName>
                </value>
                <value>
                    <fullName>List Pulls</fullName>
                </value>
                <value>
                    <fullName>Target Account Matching</fullName>
                </value>
                <value>
                    <fullName>SFDC Data Updates</fullName>
                </value>
                <value>
                    <fullName>Partner List Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publish_to_Corporate_SM_Channels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish to Corporate SM Channels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_to_Corporate_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish to Corporate Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_Country__c</fullName>
        <label>Region &amp; Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Email_Title__c</fullName>
        <description>Email Title of the request.</description>
        <inlineHelpText>Email Title of the request</inlineHelpText>
        <label>Request Email Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Received__c</fullName>
        <description>Which date was the request received</description>
        <inlineHelpText>Which date was the request received</inlineHelpText>
        <label>Request Received</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>Please select the type of request for the project.</description>
        <inlineHelpText>Please select the type of request for the project</inlineHelpText>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>File Upload Request</fullName>
                </value>
                <value>
                    <fullName>Data Request</fullName>
                </value>
                <value>
                    <fullName>Campaign Request</fullName>
                </value>
                <value>
                    <fullName>Other Request</fullName>
                </value>
                <value>
                    <fullName>Outsourced</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requester_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester Lookup</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria. Please include someone from the Genesys - Employee Account.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <value>001U000000KGQsLIAX</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marketing Ops Projects (Requestor Lookup)</relationshipLabel>
        <relationshipName>Marketing_Ops_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.DoNotUseInReport__c</field>
                <operation>equals</operation>
                <value>true</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marketing Ops Projects</relationshipLabel>
        <relationshipName>Marketing_Ops_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requires_Additional_Work_After_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check mark this box if the file upload requires additional work. Please state additional work in the text box</description>
        <inlineHelpText>Check mark this box if the file upload requires additional work. Please state additional work in the text box below.</inlineHelpText>
        <label>Requires Additional Work After Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_Vendor_Date__c</fullName>
        <description>Please note the date when the service was sent to the vendor. This only needs to be filled out when the MOP type is &quot;Outsourced&quot;.</description>
        <inlineHelpText>Date when the service was sent to the vendor</inlineHelpText>
        <label>Sent to Vendor Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Delay_Notes__c</fullName>
        <description>Please insert any reason why this List Load was delayed (exceptions, issue with the load, etc)</description>
        <inlineHelpText>Please insert any reason why this List Load was delayed</inlineHelpText>
        <label>Service Delay Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Code_Lookup__c</fullName>
        <formula>Campaign_Lookup__r.Source_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Code Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the project</description>
        <inlineHelpText>Status of the project</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Awaiting Response</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Email_Time__c</fullName>
        <label>Target Email Time</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_Outsourced_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In some cases we will need to verify the work that was done by a vendor. Please check mark this box to note that the work was verified.</description>
        <inlineHelpText>Please check mark this box to note that the work was verified.</inlineHelpText>
        <label>Verified Outsourced Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visible_in_Salesforce__c</fullName>
        <description>Date when the entire list became visible in Salesforce</description>
        <inlineHelpText>Date when the entire list became visible in Salesforce</inlineHelpText>
        <label>Visible In Salesforce</label>
        <type>Date</type>
    </fields>
    <label>Marketing Ops Project</label>
    <listViews>
        <fullName>All_Everything</fullName>
        <columns>Marketing_Ops_Project_ID__c</columns>
        <columns>NAME</columns>
        <columns>Assigned_to__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Request_Received__c</columns>
        <columns>Next_Step_Due_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Campaign_Source_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All - Open &amp; Closed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open</fullName>
        <columns>Marketing_Ops_Project_ID__c</columns>
        <columns>NAME</columns>
        <columns>Assigned_to__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Next_Step_Due_Date__c</columns>
        <columns>Request_Received__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>All - Open</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open_Closed_FUT_Requests</fullName>
        <columns>Marketing_Ops_Project_ID__c</columns>
        <columns>Source_Code_Lookup__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>File_Upload_Complete__c</columns>
        <columns>FUT_Prep_Count__c</columns>
        <columns>Final_List_Count__c</columns>
        <columns>Campaign_Member_Count__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>FUT_List_Type__c</columns>
        <columns>Request_Received__c</columns>
        <columns>Days_in_Service__c</columns>
        <columns>Emailed_Requester_Finished__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Requester_Lookup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>File Upload Request</value>
        </filters>
        <label>FUT Requests - Open &amp; Closed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open_No_FUT</fullName>
        <columns>Marketing_Ops_Project_ID__c</columns>
        <columns>NAME</columns>
        <columns>Assigned_to__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Next_Step_Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Request_Received__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Request_Type__c</field>
            <operation>notEqual</operation>
            <value>File Upload Request</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Ongoing</value>
        </filters>
        <label>All - Open Projects Excluding FUT/Ongoin</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Outsourced</fullName>
        <columns>Marketing_Ops_Project_ID__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Sent_to_Vendor_Date__c</columns>
        <columns>Completed_by_Vendor_Date__c</columns>
        <columns>Outsourced_Service_Type__c</columns>
        <columns>Outsourced_Service_Duration__c</columns>
        <columns>Completed_by_Vendor__c</columns>
        <columns>Verified_Outsourced_Service__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>Outsourced</value>
        </filters>
        <label>All - Outsourced</label>
        <language>en_US</language>
    </listViews>
</CustomObject>